--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="@dark:bg-slate-900 @dark:text-zinc-300 h-full font-sans">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -9,8 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="h-full m-0">
+    <div id="root" class="h-full"></div>
     <script type="module" src="src/index.tsx"></script>
   </body>
 </html>
