Fix dark mode styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="@dark:bg-slate-900 @dark:text-zinc-300 h-full font-sans">
+<html lang="en" class="@dark:bg-zinc-900 @dark:text-zinc-300 h-full font-sans">
   <head>
     <meta charset="UTF-8" />
     <meta
